--- a/react-components/package.json
+++ b/react-components/package.json
@@ -8,12 +8,14 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format:fix":"prettier ./src --write"
+    "format:fix": "prettier ./src --write",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.3",
     "vite": "^4.4.5"
   },
   "devDependencies": {
@@ -31,7 +33,12 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --cache --fix"
   }
 }
