--- a/react-components/package.json
+++ b/react-components/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "format:fix": "prettier ./src --write",
     "prepare": "husky install",
-    "precommit": "lint-staged"
+    "lint-staged": "lint"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.3",
