--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format:fix": "prettier ./src --write",
+    "lint:fix": "eslint . --fix",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -37,6 +38,6 @@
     "typescript": "^5.0.2"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "eslint --cache --fix"
+    "*.{ts,tsx}": "eslint"
   }
 }
