--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run test:coverage"
+      "pre-push": "npm run test"
     }
   },
   "dependencies": {
