--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test",
+      "pre-commit": "lint-staged",
       "pre-push": "npm run test"
     }
   },
