--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "lint:fix": "eslint . --fix",
     "prepare": "husky install",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "postinstall": "chmod +x .husky/*"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "enzyme-to-json": "^3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
