--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "lint-staged": "^15.0.2",
     "husky": "^8.0.0",
-    "prettier": "^3.0.3"
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3",
+    "typescript": "^5"
   },
   "husky": {
     "hooks": {
