--- a/forms/package.json
+++ b/forms/package.json
@@ -34,16 +34,11 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.0",
     "lint-staged": "^15.0.2",
-    "prettier": "^3.0.3",
+    "prettier": "3.1.0",
     "react-test-renderer": "^18.2.0",
     "typescript": "^5.0.2",
     "vi-fetch": "^0.8.0",
     "vite": "^4.4.5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.tsx": [
@@ -54,6 +49,8 @@
       "eslint",
       "prettier --write"
     ],
-    "*.css": "prettier --write"
+    "*.css": "prettier --write",
+    "*.{ts,tsx}": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
