feat: add basic layout

--- a/forms/.gitignore
+++ b/forms/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 
 node_modules
 dist
+coverage
 dist-ssr
 *.local
 
@@ -22,3 +23,68 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+next/next-env.d.ts
+next/.next/build-manifest.json
+next/.next/package.json
+next/.next/react-loadable-manifest.json
+next/.next/trace
+next/.next/cache/webpack/client-development/0.pack.gz
+next/.next/cache/webpack/client-development/1.pack.gz
+next/.next/cache/webpack/client-development/2.pack.gz
+next/.next/cache/webpack/client-development/3.pack.gz
+next/.next/cache/webpack/client-development/4.pack.gz
+next/.next/cache/webpack/client-development/5.pack.gz
+next/.next/cache/webpack/client-development/6.pack.gz
+next/.next/cache/webpack/client-development/7.pack.gz
+next/.next/cache/webpack/client-development/8.pack.gz
+next/.next/cache/webpack/client-development/9.pack.gz
+next/.next/cache/webpack/client-development/10.pack.gz
+next/.next/cache/webpack/client-development/11.pack.gz
+next/.next/cache/webpack/client-development/12.pack.gz
+next/.next/cache/webpack/client-development/13.pack.gz
+next/.next/cache/webpack/client-development/14.pack.gz
+next/.next/cache/webpack/client-development/15.pack.gz
+next/.next/cache/webpack/client-development/index.pack.gz
+next/.next/cache/webpack/client-development/index.pack.gz.old
+next/.next/cache/webpack/client-development-fallback/0.pack.gz
+next/.next/cache/webpack/client-development-fallback/index.pack.gz
+next/.next/cache/webpack/server-development/0.pack.gz
+next/.next/cache/webpack/server-development/1.pack.gz
+next/.next/cache/webpack/server-development/2.pack.gz
+next/.next/cache/webpack/server-development/3.pack.gz
+next/.next/cache/webpack/server-development/4.pack.gz
+next/.next/cache/webpack/server-development/5.pack.gz
+next/.next/cache/webpack/server-development/6.pack.gz
+next/.next/cache/webpack/server-development/7.pack.gz
+next/.next/cache/webpack/server-development/8.pack.gz
+next/.next/cache/webpack/server-development/9.pack.gz
+next/.next/cache/webpack/server-development/10.pack.gz
+next/.next/cache/webpack/server-development/11.pack.gz
+next/.next/cache/webpack/server-development/12.pack.gz
+next/.next/cache/webpack/server-development/index.pack.gz
+next/.next/cache/webpack/server-development/index.pack.gz.old
+next/.next/server/middleware-build-manifest.js
+next/.next/server/middleware-manifest.json
+next/.next/server/middleware-react-loadable-manifest.js
+next/.next/server/next-font-manifest.js
+next/.next/server/next-font-manifest.json
+next/.next/server/pages-manifest.json
+next/.next/server/webpack-runtime.js
+next/.next/server/pages/_app.js
+next/.next/server/pages/_document.js
+next/.next/server/pages/_error.js
+next/.next/server/pages/index.js
+next/.next/server/vendor-chunks/@swc.js
+next/.next/server/vendor-chunks/next.js
+next/.next/static/chunks/main.js
+next/.next/static/chunks/polyfills.js
+next/.next/static/chunks/react-refresh.js
+next/.next/static/chunks/webpack.js
+next/.next/static/chunks/pages/_app.js
+next/.next/static/chunks/pages/_error.js
+next/.next/static/chunks/pages/index.js
+next/.next/static/development/_buildManifest.js
+next/.next/static/development/_ssgManifest.js
+next/.next/static/webpack/6669b5635691c072.webpack.hot-update.json
+next/.next/static/webpack/633457081244afec._.hot-update.json
+next/.next/static/webpack/webpack.6669b5635691c072.hot-update.js
