--- a/forms/package.json
+++ b/forms/package.json
@@ -18,12 +18,15 @@
     "postinstall": "chmod +x .husky/*"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "enzyme-to-json": "^3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.3",
@@ -65,13 +68,13 @@
   },
   "lint-staged": {
     "*.tsx": [
-      "prettier --write",
-      "eslint"
+      "npm run prettier --write",
+      "npm run eslint"
     ],
     "*.html": [
-      "eslint",
-      "prettier --write"
+      "npm run eslint",
+      "npm run prettier --write"
     ],
-    "*.css": "prettier --write"
+    "*.css": "npm run prettier --write"
   }
 }
